--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -51,7 +51,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.5</version>
+		</dependency>
 
     </dependencies>
 
