--- a/test-service/src/main/resources/application.properties
+++ b/test-service/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:test_application
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=riya20
-spring.datasource.password=root
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false 
-spring.h2.console.settings.web-allow-others=false
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=gorm
+spring.jpa.hibernate.ddl-auto=create
+spring.cloud.config.enabled=false
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+logging.level.root=info
